--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -38,6 +38,8 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\CameraFollow.cs" />
+     <Compile Include="Assets\Scripts\GoToNewPlace.cs" />
+     <Compile Include="Assets\Scripts\DontDestoyOnLoad.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.3.11f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
